Add save functionality for analyzed and generated sentences
Introduced the ability to save analyzed and generated sentences into specified files based on user selection. Updated configurations, UI, and relevant classes to support this functionality, ensuring proper file handling and seamless integration with existing structures.